--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-cli": "^4.1.0"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
