--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.11",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
