--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "webpack-cli": "^4.1.0"
   },
   "dependencies": {
+    "@google-cloud/language": "^4.2.0",
+    "@google-cloud/storage": "^5.4.0",
     "axios": "^0.21.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.11",
