--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   "dependencies": {
     "@google-cloud/language": "^4.2.0",
     "@google-cloud/storage": "^5.4.0",
+    "@google-cloud/text-to-speech": "^3.1.1",
     "axios": "^0.21.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.11",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-use-audio-player": "^1.2.3"
   }
 }
