--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "file-loader": "^6.2.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.1.0"
   },
@@ -37,6 +38,6 @@
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-use-audio-player": "^1.2.3"
+    "use-sound": "^1.0.2"
   }
 }
