--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1",
     "use-sound": "^1.0.2"
   }
 }
