--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "react-dev": "webpack -d --watch",
+    "build": "webpack --mode production",
     "start": "nodemon server/index.js"
   },
   "repository": {
