--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "@google-cloud/storage": "^5.4.0",
     "@google-cloud/text-to-speech": "^3.1.1",
     "axios": "^0.21.0",
+    "cowsay": "^1.4.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.11",
     "nodemon": "^2.0.6",
