--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@google-cloud/text-to-speech": "^3.1.1",
     "axios": "^0.21.0",
     "cowsay": "^1.4.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.11",
     "nodemon": "^2.0.6",
