--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode production",
+    "start": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
